deal with self->priv->group_contact_owners may containing NULL contact

If the owner is unknown self->priv->group_contact_owners may contain NULL
TpContact. g_object_unref() not being NULL safe we have to use our own
value_destroy_func to avoid warnings.

https://bugs.freedesktop.org/show_bug.cgi?id=41928